# personal_finance_tracker

./: .gitignore  LICENSE  README.md
backend/: README.md  app.py  main.py  pyproject.toml
backend/crud/: categories.py  users.py
backend/middleware/: auth.py
backend/models/: basemodel.py  budget.py  category.py  expense.py  income.py  user.py
backend/routes/: categories.py  users.py
backend/schemas/: categoryschema.py  userschema.py
backend/storage/: db.py  redis.py
backend/utils/: email.py  errors.py  security.py  utils.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: CreateAccount.tsx  Login.tsx
